--- a/mybatis-spring/pom.xml
+++ b/mybatis-spring/pom.xml
@@ -32,7 +32,7 @@
             <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
                 <artifactId>log4j-bom</artifactId>
-                <version>2.11.1</version>
+                <version>2.13.3</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
@@ -163,43 +163,45 @@
         </dependency>
 
         <!-- 日志文件管理包 -->
-        <!-- log start -->
+        <!-- log4j2 start -->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-slf4j-impl</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-web</artifactId>
+            <artifactId>log4j-core</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
         </dependency>
+        <!-- 保证 web 应用正常清理 log 资源 -->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
+            <artifactId>log4j-web</artifactId>
         </dependency>
-        <dependency> <!-- 后向兼容：使用Log4j2实现log2j1.x的接口 -->
+        <dependency> <!-- 桥接：slf4j 到 log4j2 的桥梁 -->
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+        </dependency>
+        <dependency> <!-- 后向兼容：log4j1.x 平滑升级到 log4j2 -->
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-1.2-api</artifactId>
         </dependency>
-        <dependency> <!-- 桥接：告诉commons logging使用Log4j2 -->
+        <dependency> <!-- 桥接：commons-logging（jcl） 到 log4j2 的桥梁 -->
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-jcl</artifactId>
         </dependency>
+        <!-- slf4j 日志切面，相当于一个适配器 -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>1.7.7</version>
         </dependency>
-        <!-- 异步处理框架 log4j2 使用 -->
+        <!-- 高性能并发编程框架 log4j2 使用 -->
         <dependency>
             <groupId>com.lmax</groupId>
             <artifactId>disruptor</artifactId>
             <version>3.4.2</version>
         </dependency>
-        <!-- log end -->
+        <!-- log4j2 end -->
 
         <!-- 上传组件包 -->
         <dependency>
